FIxed work inquiry spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -179,7 +179,7 @@ footer .contact-box p{
 }
 
 .content-container{
-    padding: 60px 0px;
+    padding: 20px 0px;
 }
 .content h1 {
     font-size: 64px;
@@ -206,5 +206,6 @@ footer .contact-box p{
 .content{
     margin: 30px;
 }
+
 
 
